<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.account.AccountFragment">

    <data>

        <variable
                name="viewmodel"
                type="gug.co.com.secureaccount.viewmodels.account.AccountViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            style="@style/mm"
            android:id="@+id/coordinator">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_gravity="center_vertical"
                android:id="@+id/constraint"
                style="@style/mm">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardElevation="8dp"
                    android:id="@+id/singUpMail_cardView"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/mm">

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="16dp"
                            style="@style/TextInputLayout"
                            app:errorEnabled="true"
                            android:id="@+id/username_inputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:drawablePadding="8dp"
                                android:drawableLeft="@drawable/ic_mail_black_24dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/username_text"
                                android:textCursorDrawable="@drawable/cursor_secondary"
                                android:hint="@string/text_userName"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/username_inputLayout"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"
                            app:errorEnabled="true"
                            app:passwordToggleEnabled="true"
                            style="@style/TextInputLayout"
                            android:id="@+id/password_inputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:textCursorDrawable="@drawable/cursor_secondary"
                                android:layout_height="wrap_content"
                                android:drawablePadding="8dp"
                                android:inputType="textPassword"
                                android:id="@+id/password_text"
                                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                                android:hint="@string/text_password"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                            android:text="@string/button_createAccount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/enter_button"
                            style="@style/SecondaryButton"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/password_inputLayout"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="16dp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="16dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

